# t4gpd

./: .project  .pydevproject  AUTHORS  CITATION.cff  HISTORY.md  README.md  make.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
t4gpd/: Version.py  __init__.py  _version.py
t4gpd/avidon/: EnergyDemandOfITEquipment.py  EnergyDemandOfITEquipment2.py  EnergyDemandOfITEquipment3.py  STDeploymentOfPVPanels.py  STDeploymentOfPVPanels2.py  STDeploymentOfPVPanels3.py
t4gpd/comfort/: EmpiricalThermalIndices.py  LinearThermalIndices.py  UniversalThermalIndices.py
t4gpd/commons/: AngleLib.py  ArrayCoding.py  ArrayLib.py  BoundingBox.py  CSVLib.py  CalendarLib.py  CaliperLib.py  CartesianProductLib.py  Checksum.py  ChrystalAlgorithm.py  ColorTemperature.py  ConcaveLib.py  CorrelationLib.py  DataFrameLib.py  DateRangeLib.py  DatetimeLib.py  DensifierLib.py  DiameterLib.py  Distances.py  EnergyLib.py  Entropy.py  Epsilon.py  GeoDataFrameLib.py  GeoProcess.py  GeomLib.py  GeomLib3D.py  GridFaceLib.py  IllegalArgumentTypeException.py  IntervalLib.py  KernelLib.py  LandoltRingLib.py  LatLonLib.py  LineStringCuttingLib.py  ListUtilities.py  Logos.py  MyEdge.py  MyNode.py  OverlayLib.py  PointsDensifierLib.py  PointsDensifierLib3D.py  (+17 more)
t4gpd/demos/: AbstractGeoDataFrameDemos.py  GeoDataFrameDemos.py  GeoDataFrameDemos2.py  GeoDataFrameDemos3.py  GeoDataFrameDemos4.py  GeoDataFrameDemos5.py  GeoDataFrameDemos6.py  GeoDataFrameDemos7.py  GeoDataFrameDemos8.py  GeoDataFrameDemos9.py  GeoDataFrameDemosA.py  GeoDataFrameDemosB.py  (+2 more)
tests/: AllTestsSuite.py
(+650 files in other folders)
