[build-system]
# requires = ["setuptools>=42", "wheel"]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "t4gpd"
description = "Set of tools based on Python, GeoPandas and Shapely to achieve urban geoprocessing"
authors = [
    { name = "Thomas Leduc", email = "thomas.leduc@crenau.archi.fr" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: GIS"
]
keywords = ["Geospatial analysis", "Urban form", "Urban morphology", "Isovist"]
license = { text = "GPLv3+" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # "matplotlib>=2.0.1",
    # "numpy"
]
version = "0.9.9"

[project.urls]
Homepage = "https://t4gpd-docs.readthedocs.io"
Download = "https://pypi.org/project/t4gpd"

[tool.setuptools]
packages = { find = { exclude = ["tests", "tests.*", "t4gpd.future", "t4gpd.future.*"] } }
